tools/clang/raw_ptr_plugin/tests/span_exclude_fields.txt
span_exclude_fields.cpp:11:25: error: [chromium-rawptr] Use raw_span<T> instead of a span<T>.
  base::span<SomeClass> span_field;
                        ^
1 error generated.
